--- a/4-module/3-task/index.html
+++ b/4-module/3-task/index.html
@@ -52,9 +52,9 @@
     </tbody>
   </table>
   <script>
-    let table = document.querySelector('.js-teachers');
+    /* let table = document.querySelector('.js-teachers');
 
-    highlight(table);
+    highlight(table); */
   </script>
 </body>
 
